--- a/src/main/resources/templates/runners.html
+++ b/src/main/resources/templates/runners.html
@@ -28,6 +28,8 @@
         </tr>
         </tbody>
     </table>
+    <h1>avarage height</h1>
+    <h1 th:text="${height}"></h1>
 </div>
 </body>
 </html>
